--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.0.17
   flutter_svg: ^1.1.6
   image_picker: ^0.8.6+1
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
